crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__bind_dir-2.snap
---
source: crates/compiler/tests/parser_test/dir.rs
assertion_line: 41
expression: "<p :^_^=\"tt\"/>"
---
Dir:
  name: bind
  argument:
    Static: ^_^
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 8, Ln: 1, Col: 9"
      end: "Pos: 12, Ln: 1, Col: 13"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 7, Ln: 1, Col: 8"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 12, Ln: 1, Col: 13"

