crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__bind_dir-6.snap
---
source: crates/compiler/tests/parser_test/dir.rs
expression: "<p :[]=\"tt\"/>"

---
Dir:
  name: bind
  argument:
    Dynamic: ""
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 7, Ln: 1, Col: 8"
      end: "Pos: 11, Ln: 1, Col: 12"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 6, Ln: 1, Col: 7"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 11, Ln: 1, Col: 12"

