crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__bind_dir-8.snap
---
source: crates/compiler/tests/parser_test/dir.rs
assertion_line: 41
expression: "<p v-🖖:🤘.🤙/>"
---
Dir:
  name: 🖖
  argument:
    Static: 🤘
  modifiers:
    - 🤙
  expression: ~
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 10, Ln: 1, Col: 11"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 10, Ln: 1, Col: 11"

