crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__custom_dir.snap
---
source: crates/compiler/tests/parser_test/dir.rs
expression: "<p v-test=\"tt\"/>"

---
Dir:
  name: test
  argument: ~
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 10, Ln: 1, Col: 11"
      end: "Pos: 14, Ln: 1, Col: 15"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 9, Ln: 1, Col: 10"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 14, Ln: 1, Col: 15"

